[metadata]
name = PyServ
version = attr: pyserv.__version__
url = https://github.com/Matteo0810/PyServ
license = MIT
author = Mattéo Gaillard
description = web application framework for python
long_description = file: README.md

[options]
packages = find:
package_dir = = lib
include_package_data = true
python_requires = >= 3.9

[options.packages.find]
where = lib

[mypy]
files = lib
python_version = 3.9
allow_redefinition = True

[mypy-dotenv.*]
ignore_missing_imports = True